tests/cmp/duplicate-atoms.golden
Parse Error:
Duplicate constructor 'Timeout' at tests/cmp/duplicate-atoms.trp:1:18 and tests/cmp/duplicate-atoms.trp:1:28
