tests/cmp/duplicate-atoms.trp
datatype Atoms = Timeout | Timeout

let val t = Timeout
in print t
end
